implemented Tasks management and assignment

--- a/src/utils/emailTemplates/membrePrjEmail.handlebars
+++ b/src/utils/emailTemplates/membrePrjEmail.handlebars
@@ -311,7 +311,7 @@
               <tr>
                 <td class="wrapper">
                   <p>Cher/chère {{nom}} {{prenom}}</p>
-                  <p>Nous sommes heureux de vous informer que vous avez été ajouté comme membre du projet {{title}} par {{fromN}} {{fromP}}. Votre contribution est appréciée et nous avons hâte de travailler avec vous sur ce projet passionnant.</p>
+                  <p>Nous sommes heureux de vous informer que vous avez été ajouté comme membre du projet <strong>{{titre}}</strong> par <strong>{{fromN}} {{fromP}}</strong>. Votre contribution est appréciée et nous avons hâte de travailler avec vous sur ce projet passionnant.</p>
                   <p>Vous pouvez accéder à votre tableau de bord pour consulter les détails du projet et commencer à contribuer dès maintenant.</p>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                     <tbody>
